--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -108,3 +108,25 @@ nav span{
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-1.png);
   height: 300px;
 }
+
+.catcon, .research, .Earth-spin{
+  font-family: "Georgia";
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+  justify-content: center;
+}
+
+.Phish-image{
+  font-family: "Georgia";
+  font-weight: bold;
+  font-size: 40px;
+  color: white;
+  justify-content: center;
+}
+
+.textmain{
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
+}
