--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,3 @@
-* {
-  font-family: Verdana, sans-serif;
-}
-
 header {
   display: flex;
   font-family: Verdana;
@@ -46,8 +42,6 @@ nav span{
   justify-content: space-between;
   width: 1232px;
   margin: 0 auto;
-
-
 }
 
 .Small {
@@ -56,7 +50,6 @@ nav span{
   width: 240px;
   flex-wrap: wrap;
   flex-direction: column;
-
 }
 
 .Medium {
@@ -65,7 +58,6 @@ nav span{
   width: 300px;
   flex-wrap: wrap;
   flex-direction: column;
-
 }
 
 .Large {
@@ -74,15 +66,20 @@ nav span{
   width: 630px;
   flex-wrap: wrap;
   flex-direction: column;
-
 }
 
-.Main p,.Main h2,.Main span,.Main img, .text-main{
+.Main p,.Main h2,.Main span,.Main img, .textmain{
   border: 1px solid black;
 }
 
-.text-main{
+.textmain{
   border: 3px solid green;
+}
+
+.Main p{
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
 }
 
 .Phish-image{
@@ -123,10 +120,4 @@ nav span{
   font-size: 40px;
   color: white;
   justify-content: center;
-}
-
-.textmain{
-  font-family: Georgia;
-  font-size: 17px;
-  color: black;
 }
