--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -37,11 +37,12 @@ nav span{
 .Main {
   display: flex;
   position: relative;
-  top: 100px;
+  top: 150px;
   border: 3px solid black;
   justify-content: space-between;
   width: 1232px;
   margin: 0 auto;
+  margin-bottom: 50px;
 }
 
 .Small {
@@ -74,6 +75,9 @@ nav span{
 
 .textmain{
   border: 3px solid green;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
 }
 
 .Main p{
@@ -111,7 +115,7 @@ nav span{
   font-weight: bold;
   font-size: 30px;
   color: white;
-  justify-content: center;
+  text-align: center;
 }
 
 .Phish-image{
@@ -119,5 +123,4 @@ nav span{
   font-weight: bold;
   font-size: 40px;
   color: white;
-  justify-content: center;
 }
