Now they are centered!

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -96,6 +96,7 @@ nav span{
   display: flex;
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-2.png);
   height: 300px;
+  justify-content: center;
 }
 
 .research{
