--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,10 +13,6 @@ header {
   background-color: white;
 }
 
-.MainLogo{
-  flex-grow: 1;
-}
-
 header nav{
   padding-right: 40px;
   justify-content: space-between;
@@ -32,52 +28,46 @@ nav span{
   display: flex;
   align-items: center;
   padding-left: 30px;
+  flex-grow: 1;
+}
+.MainLogo span{
+  padding: 10px;
 }
 
 .Main {
   display: flex;
   position: relative;
   top: 150px;
-  border: 3px solid black;
+  border: 3px solid blue;
   justify-content: space-between;
   width: 1232px;
-  margin: 0 auto;
   margin-bottom: 50px;
 }
 
 .Small {
-  border: 2px solid black;
+  border: 2px solid yellow;
   display: flex;
   width: 240px;
-  flex-wrap: wrap;
   flex-direction: column;
 }
 
 .Medium {
-  border: 2px solid black;
+  border: 2px solid orange;
   display: flex;
   width: 300px;
-  flex-wrap: wrap;
   flex-direction: column;
+
 }
 
 .Large {
-  border: 2px solid black;
+  border: 2px solid cyan;
   display: flex;
   width: 630px;
-  flex-wrap: wrap;
   flex-direction: column;
 }
 
 .Main p,.Main h2,.Main span,.Main img, .textmain{
-  border: 1px solid black;
-}
-
-.textmain{
-  border: 3px solid green;
-  display: flex;
-  flex-direction: column;
-  align-content: center;
+  border: 1px solid red;
 }
 
 .Main p{
@@ -96,7 +86,6 @@ nav span{
   display: flex;
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-2.png);
   height: 300px;
-  justify-content: center;
 }
 
 .research{
@@ -124,4 +113,21 @@ nav span{
   font-weight: bold;
   font-size: 40px;
   color: white;
+}
+
+.stories{
+  display: flex;
+  justify-content: space-between;
+}
+
+.storyA{
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+}
+
+.storyB{
+  display: flex;
+  flex-direction: column;
+  width: 300px;
 }
