--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -38,67 +38,70 @@ nav span{
   display: flex;
   position: relative;
   top: 120px;
-  border: 3px solid blue;
   justify-content: space-between;
   width: 1232px;
   margin-bottom: 50px;
-  margin: 0 auto 50px; auto;
+  margin: 0 auto 150px auto;
+}
+
+.Main h2{
+  font-family: Georgia;
+  font-size: 30px;
+  font-weight: bold;
+  margin: 0px;
 }
 
 .Small {
-  border: 2px solid yellow;
   display: flex;
   width: 240px;
   flex-direction: column;
 }
 
 .Medium {
-  border: 2px solid orange;
   display: flex;
   width: 300px;
   flex-direction: column;
-
 }
 
 .Large {
-  border: 2px solid cyan;
   display: flex;
   width: 630px;
   flex-direction: column;
-}
-
-.Main p,.Main h2,.Main span,.Main img, .textmain{
-  ..border: 1px solid red;
 }
 
 .Main p{
   font-family: Georgia;
   font-size: 17px;
   color: black;
+  margin-bottom: 50px;
 }
 
 .Phish-image{
   display: flex;
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png);
   height: 300px;
+  align-items: center;
 }
 
 .Earth-spin{
   display: flex;
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-2.png);
   height: 300px;
+  align-items: center;
 }
 
 .research{
   display: flex;
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-3.png);
   height: 300px;
+  align-items: center;
 }
 
 .catcon{
   display: flex;
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-1.png);
   height: 300px;
+  align-items: center;
 }
 
 .catcon, .research, .Earth-spin{
@@ -137,21 +140,58 @@ nav span{
   display: flex;
   flex-direction: column;
   background-color: WhiteSmoke;
- font-family: Verdana;
- font-size: 12px;
- color: DimGray;
- justify-content: space-between;
- height: 300px;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
+  justify-content: space-between;
+  height: 300px;
 }
 
 .bitesHead h2{
-font-size: 16px;
- font-weight: bold;
- text-align: center;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 50px;
 }
 .endlinks span{
   margin: 0px;
   border-bottom: 1px solid black;
   padding: 10px 20px;
 
+}
+
+footer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  bottom: 0px;
+  width: 100%;
+  flex-direction: column;
+  height: 250px;
+  background-color: MediumAquamarine;
+  margin: auto;
+  font-family: Verdana;
+  font-size: 12px;
+}
+
+.mytimesf{
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  border-right: 3px solid white;
+  padding: 0px 20px;
+}
+
+.mytimesf, .footerlinks{
+  display: inline-block;
+}
+
+.footerlinks span{
+  padding: 0px 20px;
+}
+
+.mainfoot{
+  padding: 20px 0px;
 }
